[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/CityMap.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/CityCount_Ctrl.gd" type="Script" id=2]
[ext_resource path="res://Scripts/TravelingSalesman.gd" type="Script" id=3]
[ext_resource path="res://Scripts/CityHighlight_Ctrl.gd" type="Script" id=4]

[node name="TravelingSalesman" type="Node"]
script = ExtResource( 3 )

[node name="CityMap" parent="." instance=ExtResource( 1 )]
anchor_top = 0.00113998
anchor_bottom = 0.00113998
margin_left = 200.0
margin_right = 800.0

[node name="ControlPanel" type="Panel" parent="."]
margin_right = 200.0
margin_bottom = 600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MSTButton" type="Button" parent="ControlPanel"]
anchor_left = -0.00265182
anchor_top = 0.000883993
anchor_right = -0.00265182
anchor_bottom = 0.000883993
margin_left = 75.0
margin_top = 260.0
margin_right = 113.0
margin_bottom = 280.0
text = "MST"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GreedyButton" type="Button" parent="ControlPanel"]
margin_left = 35.0
margin_top = 290.0
margin_right = 160.0
margin_bottom = 310.0
text = "Greedy Algorithm"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClearRouteButton" type="Button" parent="ControlPanel"]
margin_left = 50.0
margin_top = 350.0
margin_right = 135.0
margin_bottom = 370.0
text = "Clear Route"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CityHighlight_Ctrl" type="HBoxContainer" parent="ControlPanel"]
margin_left = 25.0
margin_top = 420.0
margin_right = 175.0
margin_bottom = 460.0
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="CityHighlight_Select" type="OptionButton" parent="ControlPanel/CityHighlight_Ctrl"]
margin_right = 29.0
margin_bottom = 40.0

[node name="CityHighlight_Button" type="Button" parent="ControlPanel/CityHighlight_Ctrl"]
margin_left = 33.0
margin_right = 150.0
margin_bottom = 40.0
text = "Highlight Routes"

[node name="CityCount_Ctrl" type="HBoxContainer" parent="ControlPanel"]
margin_left = 30.0
margin_top = 500.0
margin_right = 164.0
margin_bottom = 520.0
alignment = 1
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="CityCount_Label" type="Label" parent="ControlPanel/CityCount_Ctrl"]
margin_top = 3.0
margin_right = 69.0
margin_bottom = 17.0
text = "# of Cities:"

[node name="CityCount_Sub" type="Button" parent="ControlPanel/CityCount_Ctrl"]
margin_left = 73.0
margin_right = 90.0
margin_bottom = 20.0
text = "-"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CityCount_No" type="Label" parent="ControlPanel/CityCount_Ctrl"]
margin_left = 94.0
margin_top = 3.0
margin_right = 110.0
margin_bottom = 17.0
text = "10"

[node name="CityCount_Add" type="Button" parent="ControlPanel/CityCount_Ctrl"]
margin_left = 114.0
margin_right = 134.0
margin_bottom = 20.0
text = "+"

[node name="BuildButton" type="Button" parent="ControlPanel"]
margin_left = 35.2379
margin_top = 555.963
margin_right = 80.2379
margin_bottom = 575.963
text = "Build"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MoveButton" type="Button" parent="ControlPanel"]
margin_left = 116.407
margin_top = 555.718
margin_right = 163.407
margin_bottom = 575.718
text = "Move"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AntColonyButton" type="Button" parent="ControlPanel"]
margin_left = 36.9235
margin_top = 190.448
margin_right = 149.924
margin_bottom = 210.448
text = "Ant Colony Step"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="ControlPanel/MSTButton" to="." method="_on_MSTButton_pressed"]
[connection signal="pressed" from="ControlPanel/GreedyButton" to="." method="_on_GreedyButton_pressed"]
[connection signal="pressed" from="ControlPanel/ClearRouteButton" to="CityMap" method="_on_ClearRouteButton_pressed"]
[connection signal="item_selected" from="ControlPanel/CityHighlight_Ctrl/CityHighlight_Select" to="CityMap" method="_on_CityHighlight_item_selected"]
[connection signal="button_down" from="ControlPanel/CityHighlight_Ctrl/CityHighlight_Button" to="CityMap" method="_on_CityHighlight_button_down"]
[connection signal="button_up" from="ControlPanel/CityHighlight_Ctrl/CityHighlight_Button" to="CityMap" method="_on_CityHighlight_button_up"]
[connection signal="pressed" from="ControlPanel/CityCount_Ctrl/CityCount_Sub" to="ControlPanel/CityCount_Ctrl" method="_on_CityCount_Sub_pressed"]
[connection signal="pressed" from="ControlPanel/CityCount_Ctrl/CityCount_Add" to="ControlPanel/CityCount_Ctrl" method="_on_CityCount_Add_pressed"]
[connection signal="pressed" from="ControlPanel/BuildButton" to="." method="_on_BuildButton_pressed"]
[connection signal="button_down" from="ControlPanel/MoveButton" to="CityMap" method="_on_MoveButton_button_down"]
[connection signal="button_up" from="ControlPanel/MoveButton" to="CityMap" method="_on_MoveButton_button_up"]
[connection signal="pressed" from="ControlPanel/AntColonyButton" to="." method="_on_AntColonyButton_pressed"]
